--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+	"name": "website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"format": "biome format --write ./",
+		"lint": "biome lint ./",
+		"types": "tsc --pretty --noEmit",
+		"review": "bun biome check --apply ./ && bun types"
+	},
+	"dependencies": {
+		"@vercel/analytics": "^1.3.1",
+		"@vercel/speed-insights": "^1.0.11",
+		"babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
+		"next": "^15.0.0-rc.0",
+		"react": "^19.0.0-rc-f994737d14-20240522",
+		"react-dom": "^19.0.0-rc-f994737d14-20240522"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.7.3",
+		"@tailwindcss/postcss": "^4.0.0-alpha.15",
+		"@types/bun": "^1.1.3",
+		"@types/node": "^20.12.12",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^4.0.0-alpha.15",
+		"typescript": "^5.4.5"
+	}
 }
