--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.11",
 		"babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
+		"convex": "^1.12.1",
+		"convex-helpers": "^0.1.41",
+		"jose": "^5.3.0",
 		"next": "^15.0.0-rc.0",
 		"react": "^19.0.0-rc-6d3110b4d9-20240531",
 		"react-dom": "^19.0.0-rc-6d3110b4d9-20240531"
@@ -26,6 +29,7 @@
 		"@types/node": "^20.12.12",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"convex-test": "^0.0.21",
 		"postcss": "^8.4.38",
 		"tailwindcss": "^4.0.0-alpha.15",
 		"typescript": "^5.4.5"
