--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"review": "bun biome check --apply ./ && bun types"
 	},
 	"dependencies": {
+		"@t3-oss/env-nextjs": "^0.10.1",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.11",
 		"babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
