--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,18 @@
 		"plugins": [{ "name": "next" }],
 		"paths": {
 			"@env": ["./src/env.ts"],
+			"@actions/*": ["./src/lib/actions/*"],
+			"@dataModel": ["./convex/_generated/dataModel"],
 			"~/*": ["./src/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"src/vitest.config.ts",
+		"convex/vitest.config.ts"
+	],
 	"exclude": ["node_modules"]
 }
