--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"format": "biome format --write ./",
 		"lint": "biome lint ./",
 		"types": "tsc --pretty --noEmit",
-		"review": "bun biome check --apply ./ && bun types",
-		"test": "vitest",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"test:next": "vitest --project next",
-		"test:convex": "vitest --project convex"
+		"test:convex": "vitest --project convex",
+		"review": "bun biome check --apply ./ && bun types & bun run test"
 	},
 	"dependencies": {
 		"@t3-oss/env-nextjs": "^0.10.1",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.11",
-		"babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
 		"convex": "^1.12.1",
 		"convex-helpers": "^0.1.41",
 		"jose": "^5.3.0",
-		"next": "^15.0.0-rc.0",
-		"react": "^19.0.0-rc-6d3110b4d9-20240531",
-		"react-dom": "^19.0.0-rc-6d3110b4d9-20240531"
+		"next": "^14.2.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.7.3",
