--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
 		"@vercel/speed-insights": "^1.0.11",
 		"convex": "^1.12.1",
 		"convex-helpers": "^0.1.41",
+		"deepmerge": "^4.3.1",
 		"jose": "^5.3.0",
 		"next": "^14.2.3",
+		"next-intl": "^3.14.1",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"server-only": "^0.0.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.7.3",
