--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
 		"review": "bun biome check --apply ./ && bun types & bun run test"
 	},
 	"dependencies": {
+		"@discordjs/rest": "^2.3.0",
 		"@t3-oss/env-nextjs": "^0.10.1",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.11",
 		"convex": "^1.12.1",
 		"convex-helpers": "^0.1.41",
 		"deepmerge": "^4.3.1",
+		"discord-oauth2": "^2.12.1",
+		"jiti": "^1.21.0",
 		"jose": "^5.3.0",
 		"next": "^14.2.3",
 		"next-intl": "^3.14.1",
+		"osu-web.js": "^2.4.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"server-only": "^0.0.1"
