--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.6.0/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
@@ -58,7 +58,8 @@
 			"quoteStyle": "single",
 			"jsxQuoteStyle": "single",
 			"arrowParentheses": "asNeeded",
-			"trailingComma": "none"
+			"trailingCommas": "none",
+			"indentStyle": "tab"
 		}
 	},
 	"vcs": {
