--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
 	"name": "website",
 	"version": "0.1.0",
-	"private": true,
 	"type": "module",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"format": "biome format --write ./",
-		"lint": "biome lint ./",
+		"format": "biome format --write",
+		"lint": "biome lint",
 		"types": "tsc --pretty --noEmit",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:next": "vitest --project next",
 		"test:convex": "vitest --project convex",
-		"review": "bun biome check --apply ./ && bun types & bun run test"
+		"review": "bun biome check --write && bun types & bun run test"
 	},
 	"dependencies": {
 		"@discordjs/rest": "^2.3.0",
@@ -25,8 +24,8 @@
 		"convex-helpers": "^0.1.41",
 		"deepmerge": "^4.3.1",
 		"discord-oauth2": "^2.12.1",
-		"jiti": "^1.21.0",
-		"jose": "^5.3.0",
+		"jiti": "^1.21.3",
+		"jose": "^5.4.0",
 		"next": "^14.2.3",
 		"next-intl": "^3.14.1",
 		"osu-web.js": "^2.4.0",
@@ -35,12 +34,12 @@
 		"server-only": "^0.0.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.7.3",
+		"@biomejs/biome": "^1.8.0",
 		"@edge-runtime/vm": "^3.2.0",
 		"@tailwindcss/postcss": "^4.0.0-alpha.15",
-		"@testing-library/react": "^15.0.7",
+		"@testing-library/dom": "^10.1.0",
+		"@testing-library/react": "^16.0.0",
 		"@types/bun": "^1.1.3",
-		"@types/node": "^20.12.12",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.0",
