--- a/package.json
+++ b/package.json
@@ -1,52 +1,57 @@
 {
-	"name": "website",
-	"version": "0.1.0",
-	"type": "module",
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"format": "biome format --write",
-		"lint": "biome lint",
-		"types": "tsc --pretty --noEmit",
-		"test": "vitest",
+  "name": "website",
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "biome lint",
+    "lint:check": "biome check",
+    "types": "tsc --pretty --noEmit",
+    "test": "vitest",
     "test:once": "vitest run",
-		"review": "bun biome check --write && bun types & bun run test"
-	},
-	"dependencies": {
-		"@discordjs/rest": "^2.3.0",
-		"@t3-oss/env-nextjs": "^0.10.1",
-		"@vercel/analytics": "^1.3.1",
-		"@vercel/speed-insights": "^1.0.11",
-		"convex": "^1.12.1",
-		"convex-helpers": "^0.1.41",
-		"deepmerge": "^4.3.1",
-		"discord-oauth2": "^2.12.1",
-		"jiti": "^1.21.3",
-		"jose": "^5.4.0",
-		"next": "^14.2.3",
-		"next-intl": "^3.14.1",
-		"osu-web.js": "^2.4.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"server-only": "^0.0.1"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^1.8.0",
-		"@edge-runtime/vm": "^3.2.0",
-		"@tailwindcss/postcss": "^4.0.0-alpha.15",
-		"@testing-library/dom": "^10.1.0",
-		"@testing-library/react": "^16.0.0",
-		"@types/bun": "^1.1.3",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"@vitejs/plugin-react": "^4.3.0",
-		"convex-test": "^0.0.21",
-		"jsdom": "^24.1.0",
-		"postcss": "^8.4.38",
-		"tailwindcss": "^4.0.0-alpha.15",
-		"typescript": "^5.4.5",
-		"vite-tsconfig-paths": "^4.3.2",
-		"vitest": "^1.6.0"
-	}
+    "review": "bun biome check --write && bun types && bun test:once"
+  },
+  "dependencies": {
+    "@discordjs/rest": "^2.3.0",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.11",
+    "convex": "^1.12.1",
+    "convex-helpers": "^0.1.41",
+    "deepmerge": "^4.3.1",
+    "discord-oauth2": "^2.12.1",
+    "jiti": "^1.21.3",
+    "jose": "^5.4.0",
+    "next": "^14.2.3",
+    "next-intl": "^3.14.1",
+    "osu-web.js": "^2.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "server-only": "^0.0.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
+    "@edge-runtime/vm": "^3.2.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@tailwindcss/postcss": "^4.0.0-alpha.15",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react": "^16.0.0",
+    "@types/bun": "^1.1.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "convex-test": "^0.0.21",
+    "jsdom": "^24.1.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^4.0.0-alpha.15",
+    "typescript": "^5.4.5",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
+  }
 }
