--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@discordjs/rest": "^2.3.0",
     "@t3-oss/env-nextjs": "^0.11.0",
     "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
+    "@vercel/edge-config": "^1.2.1",
     "convex": "^1.14.1",
     "convex-helpers": "^0.1.50",
     "deepmerge": "^4.3.1",
