chore: bumped deps and improved image loading

--- a/package.json
+++ b/package.json
@@ -16,38 +16,39 @@
     "review": "bun biome check --write && bun types && bun test:once"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^5.0.27",
-    "@clerk/nextjs": "^5.3.1",
-    "@discordjs/rest": "^2.3.0",
-    "@t3-oss/env-nextjs": "^0.11.0",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/edge-config": "^1.2.1",
-    "convex": "^1.14.1",
-    "convex-helpers": "^0.1.50",
+    "@clerk/clerk-sdk-node": "^5.1.2",
+    "@clerk/nextjs": "^6.9.2",
+    "@discordjs/rest": "^2.4.0",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/edge-config": "^1.4.0",
+    "clsx": "^2.1.1",
+    "convex": "^1.17.3",
+    "convex-helpers": "^0.1.67",
     "deepmerge": "^4.3.1",
     "jiti": "^1.21.6",
-    "next": "^14.2.5",
-    "next-intl": "^3.17.3",
+    "next": "^15.1.0",
+    "next-intl": "^3.26.1",
     "osu-web.js": "^2.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
-    "svix": "^1.30.0"
+    "svix": "^1.44.0",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@edge-runtime/vm": "^4.0.2",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "@tailwindcss/postcss": "^4.0.0-alpha.19",
-    "@types/bun": "^1.1.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "convex-test": "^0.0.28",
-    "postcss": "^8.4.41",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^4.0.0-alpha.19",
-    "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "@biomejs/biome": "^1.9.4",
+    "@edge-runtime/vm": "^4.0.4",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@tailwindcss/postcss": "^4.0.0-beta.7",
+    "@types/bun": "^1.1.14",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "convex-test": "0.0.34",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^4.0.0-beta.7",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
